--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.6.0",
+    "@material-ui/icons": "^4.5.1",
+    "chart.js": "^2.9.2",
     "react": "^16.11.0",
+    "react-chartkick": "^0.4.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-scroll-to-bottom": "^1.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
