--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.6.0",
     "@material-ui/icons": "^4.5.1",
     "chart.js": "^2.9.2",
+    "dotenv": "^8.2.0",
     "react": "^16.11.0",
     "react-chartkick": "^0.4.0",
     "react-dom": "^16.11.0",
