--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-chartkick": "^0.4.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
-    "react-scroll-to-bottom": "^1.3.2"
+    "react-scroll-to-bottom": "^1.3.2",
+    "react-swipe-to-delete-component": "^0.5.4"
   },
   "scripts": {
     "start": "react-scripts start",
