--- a/public/manifest/manifest.json
+++ b/public/manifest/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "FatAss",
+  "name": "Nutri Fit",
   "theme_color": "#feaf00",
   "background_color": "#ffffff",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "portrait",
   "Scope": "/",
   "start_url": "/",
